--- a/src/views/ThieuNhi/suaThieunhi.fxml
+++ b/src/views/ThieuNhi/suaThieunhi.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="631.0" style="-fx-background-color: #E6F2F9;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="469.0" prefWidth="617.0" style="-fx-background-color: #E6F2F9;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="148.0" layoutY="300.0" pickOnBounds="true" preserveRatio="true" />
       <GridPane layoutX="34.0" layoutY="17.0" prefHeight="268.0" prefWidth="558.0">
@@ -38,7 +37,7 @@
             <Label text="Thành tích học tập:" GridPane.rowIndex="4" />
             <TextField prefHeight="26.0" prefWidth="305.0" text="Học sinh giỏi toán cấp Làng Nà Cạn" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <Label text="Minh chứng:" GridPane.rowIndex="5" />
-            <Button mnemonicParsing="false" text="Thêm minh chứng" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Button mnemonicParsing="false" stylesheets="@../../static/css/fullpackstyling.css" text="Thêm minh chứng" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="5" />
          </children>
       </GridPane>
    </children>
