--- a/src/views/main.fxml
+++ b/src/views/main.fxml
@@ -18,21 +18,6 @@
                   <children>
                       <VBox layoutY="121.0" prefHeight="530.0" prefWidth="272.0">
                           <children>
-                              <Button id="button1" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#handleThieunhi" prefHeight="61.0" prefWidth="272.0" stylesheets="@../static/css/fullpackstyling.css" text="Thiếu nhi" textFill="WHITE">
-                                  <graphic>
-                                      <ImageView fitHeight="24.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../static/img/thieunhi.png" />
-                                 </image>
-                              </ImageView>
-                                  </graphic>
-                                  <font>
-                                      <Font size="18.0" />
-                                  </font>
-                                  <padding>
-                                      <Insets left="50.0" />
-                                  </padding>
-                              </Button>
                         <Button id="button1" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#handleHogiadinh" prefHeight="61.0" prefWidth="272.0" stylesheets="@../static/css/fullpackstyling.css" text="Hộ gia đình" textFill="WHITE">
                            <graphic>
                               <ImageView fitHeight="24.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
@@ -47,12 +32,13 @@
                               <Insets left="50.0" />
                            </padding>
                         </Button>
-                        <Button id="button1" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#handlePhatqua" prefHeight="61.0" prefWidth="272.0" stylesheets="@../static/css/fullpackstyling.css" text="Phát quà" textFill="WHITE">
+                        <Button id="button1" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#handlePhatquaThieunhi" prefHeight="61.0" prefWidth="272.0" stylesheets="@../static/css/fullpackstyling.css" text="Phát quà" textFill="WHITE">
                            <graphic>
                               <ImageView fitHeight="24.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../static/img/qua.png" />
-                                 </image></ImageView>
+                                 </image>
+                              </ImageView>
                            </graphic>
                            <font>
                               <Font size="18.0" />
@@ -60,6 +46,41 @@
                            <padding>
                               <Insets left="50.0" />
                            </padding>
+                        </Button>
+                        <Button id="button1" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#handlePhatquaThieunhi" prefHeight="33.0" prefWidth="272.0" stylesheets="@../static/css/fullpackstyling.css" text="Thiếu nhi" textFill="WHITE">
+                           <graphic>
+                              <ImageView fitHeight="19.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../static/img/thieunhi.png" />
+                                 </image></ImageView>
+                           </graphic>
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                           <padding>
+                              <Insets left="75.0" />
+                           </padding>
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                        </Button>
+                        <Button id="button1" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#handlePhatquaHocsinh" prefHeight="33.0" prefWidth="280.0" stylesheets="@../static/css/fullpackstyling.css" text="Học sinh" textFill="WHITE">
+                           <graphic>
+                              <ImageView fitHeight="19.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../static/img/hocsinh.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                           <padding>
+                              <Insets left="75.0" />
+                           </padding>
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
                         </Button>
                         <Button id="button1" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#handleThongke" prefHeight="61.0" prefWidth="272.0" stylesheets="@../static/css/fullpackstyling.css" text="Thống kê" textFill="WHITE">
                            <graphic>
