--- a/src/views/PhatQua/phatquaHocsinh.fxml
+++ b/src/views/PhatQua/phatquaHocsinh.fxml
@@ -2,8 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -18,7 +16,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="651.0" prefWidth="802.0" style="-fx-background-color: #E6F2F9;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.thieuNhiController">
     <children>
-        <GridPane layoutX="10.0" layoutY="1.0" prefHeight="651.0" prefWidth="782.0">
+        <GridPane layoutX="10.0" layoutY="1.0" prefHeight="651.0" prefWidth="782.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
@@ -50,38 +48,12 @@
                         </Button>
                     </children>
                 </HBox>
-                <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" GridPane.rowIndex="1">
-                    <tabs>
-                        <Tab text="Thiếu nhi">
-                            <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                    <children>
-                                        <TableView prefHeight="494.0" prefWidth="782.0">
-                                            <columns>
-                                                <TableColumn prefWidth="75.0" text="Tên" />
-                                                <TableColumn prefWidth="75.0" text="Con chủ hộ" />
-                                            </columns>
-                                        </TableView>
-                                    </children>
-                                </AnchorPane>
-                            </content>
-                        </Tab>
-                        <Tab text="Học sinh">
-                            <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                    <children>
-                                        <TableView prefHeight="494.0" prefWidth="784.0">
-                                            <columns>
-                                                <TableColumn prefWidth="75.0" text="Tên" />
-                                                <TableColumn prefWidth="75.0" text="Trường" />
-                                            </columns>
-                                        </TableView>
-                                    </children>
-                                </AnchorPane>
-                            </content>
-                        </Tab>
-                    </tabs>
-                </TabPane>
+            <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+              <columns>
+                <TableColumn prefWidth="75.0" text="Tên" />
+                <TableColumn prefWidth="75.0" text="C2" />
+              </columns>
+            </TableView>
             </children>
         </GridPane>
     </children>
