--- a/src/views/ThieuNhi/thieunhi.fxml
+++ b/src/views/ThieuNhi/thieunhi.fxml
@@ -58,8 +58,10 @@
                            <children>
                               <TableView prefHeight="494.0" prefWidth="782.0">
                                 <columns>
-                                  <TableColumn prefWidth="75.0" text="Tên" />
-                                  <TableColumn prefWidth="75.0" text="Con chủ hộ" />
+                                  <TableColumn prefWidth="235.2000150680542" text="Tên" />
+                                  <TableColumn prefWidth="92.79997253417969" text="Giới tính" />
+                                    <TableColumn prefWidth="158.4000244140625" text="Ngày sinh" />
+                                    <TableColumn prefWidth="295.20001220703125" text="ID gia đình" />
                                 </columns>
                               </TableView>
                            </children>
@@ -72,8 +74,11 @@
                            <children>
                               <TableView prefHeight="494.0" prefWidth="784.0">
                                 <columns>
-                                  <TableColumn prefWidth="75.0" text="Tên" />
-                                  <TableColumn prefWidth="75.0" text="Trường" />
+                                  <TableColumn prefWidth="121.6000394821167" text="Tên" />
+                                  <TableColumn prefWidth="106.39999389648438" text="Giới tinh" />
+                                    <TableColumn prefWidth="136.80003356933594" text="Ngày Sinh" />
+                                    <TableColumn prefWidth="252.79998779296875" text="Trường" />
+                                    <TableColumn prefWidth="163.99993896484375" text="ID gia đình" />
                                 </columns>
                               </TableView>
                            </children>
