--- a/src/views/login/login.fxml
+++ b/src/views/login/login.fxml
@@ -1,14 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="views.login.Login"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane id="login" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="509.0" prefWidth="449.0" stylesheets="@../../static/css/fullpackstyling.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <TextField layoutX="37.0" layoutY="69.0" prefHeight="57.0" prefWidth="374.0" promptText="Email hoặc số điện thoại" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css">
+         <font>
+            <Font name="SansSerif Regular" size="20.0" />
+         </font>
+      </TextField>
+      <PasswordField layoutX="37.0" layoutY="141.0" prefHeight="58.0" prefWidth="374.0" promptText="Mật khẩu" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css">
+         <font>
+            <Font name="SansSerif Regular" size="20.0" />
+         </font>
+      </PasswordField>
+      <Button id="login_button" layoutX="37.0" layoutY="229.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="374.0" style="-fx-background-color: #4267b2;" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css" text="Đăng nhập" textFill="#fafafa">
+         <font>
+            <Font name="SansSerif Regular" size="20.0" />
+         </font>
+      </Button>
+      <Hyperlink alignment="TOP_CENTER" layoutX="37.0" layoutY="310.0" prefHeight="26.0" prefWidth="374.0" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css" text="Quên mật khẩu?">
+         <font>
+            <Font name="SansSerif Regular" size="15.0" />
+         </font>
+      </Hyperlink>
+      <Button alignment="TOP_CENTER" layoutX="110.0" layoutY="364.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="227.0" style="-fx-background-color: #42b72a;" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css" text="Tạo tài khoản mới" textFill="#fafafa">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
