--- a/src/views/login/login.fxml
+++ b/src/views/login/login.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.PasswordField?>
@@ -20,13 +21,17 @@
             <Font name="SansSerif Regular" size="20.0" />
          </font>
       </PasswordField>
-      <Button id="login_button" alignment="CENTER" contentDisplay="CENTER" layoutX="38.0" layoutY="229.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="30.0" prefWidth="374.0" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css" text="Đăng nhập" textAlignment="CENTER" textFill="#fafafa">
+      <Button id="login_button" alignment="CENTER" contentDisplay="CENTER" layoutX="38.0" layoutY="229.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="30.0" prefWidth="374.0" stylesheets="@../../static/css/fullpackstyling.css" text="Đăng nhập" textAlignment="CENTER" textFill="#fafafa">
          <font>
             <Font name="Berlin Sans FB Bold" size="24.0" />
          </font>
          <effect>
             <DropShadow />
          </effect>
+         <styleClass>
+            <String fx:value="linear-grad" />
+            <String fx:value="login" />
+         </styleClass>
       </Button>
       <Hyperlink alignment="TOP_CENTER" layoutX="165.0" layoutY="311.0" prefHeight="22.0" prefWidth="119.0" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css" text="Quên mật khẩu?">
          <font>
