--- a/src/views/hogiadinh/hogiadinh.fxml
+++ b/src/views/hogiadinh/hogiadinh.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="651.0" prefWidth="802.0" style="-fx-background-color: #E6F2F9;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ThieuNhiController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="651.0" prefWidth="802.0" style="-fx-background-color: #E6F2F9;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HoGiaDinhController">
     <children>
         <GridPane layoutX="10.0" layoutY="1.0" prefHeight="640.0" prefWidth="782.0">
             <columnConstraints>
@@ -43,12 +43,12 @@
                         </Button>
                     </children>
                 </HBox>
-            <TableView prefHeight="502.0" prefWidth="782.0" GridPane.rowIndex="1">
+            <TableView fx:id="hoGiaDinhTable" prefHeight="502.0" prefWidth="782.0" GridPane.rowIndex="1">
               <columns>
-                <TableColumn prefWidth="155.99997234344482" text="ID Gia Đình" />
-                <TableColumn prefWidth="231.99998474121094" text="Địa chỉ" />
-                  <TableColumn prefWidth="204.0" text="Tên chủ hộ" />
-                  <TableColumn prefWidth="191.199951171875" text="SĐT" />
+                <TableColumn fx:id="col_IDGiaDinh" prefWidth="155.99997234344482" text="ID Gia Đình" />
+                <TableColumn fx:id="col_DiaChi" prefWidth="231.99998474121094" text="Địa chỉ" />
+                  <TableColumn fx:id="col_TenChuHo" prefWidth="204.0" text="Tên chủ hộ" />
+                  <TableColumn fx:id="col_SDT" prefWidth="191.199951171875" text="SĐT" />
               </columns>
             </TableView>
             </children>
