--- a/src/views/login/login.fxml
+++ b/src/views/login/login.fxml
@@ -1,42 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="366.0" prefWidth="450.0" stylesheets="@../../static/css/fullpackstyling.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="452.0" styleClass="pane" stylesheets="@../../static/css/fullpackstyling.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
    <children>
-      <TextField layoutX="38.0" layoutY="81.0" prefHeight="57.0" prefWidth="374.0" promptText="Số CMND" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css">
+      <TextField layoutX="38.0" layoutY="58.0" prefHeight="57.0" prefWidth="374.0" promptText="Số CMND" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css">
          <font>
-            <Font name="SansSerif Regular" size="20.0" />
+            <Font name="Berlin Sans FB" size="23.0" />
          </font>
       </TextField>
-      <PasswordField layoutX="38.0" layoutY="154.0" prefHeight="58.0" prefWidth="374.0" promptText="Mật khẩu" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css">
+      <PasswordField layoutX="38.0" layoutY="131.0" prefHeight="58.0" prefWidth="374.0" promptText="Mật khẩu" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css">
          <font>
-            <Font name="SansSerif Regular" size="20.0" />
+            <Font name="Berlin Sans FB" size="20.0" />
          </font>
       </PasswordField>
-      <Button id="login_button" alignment="CENTER" contentDisplay="CENTER" layoutX="38.0" layoutY="229.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="30.0" prefWidth="374.0" stylesheets="@../../static/css/fullpackstyling.css" text="Đăng nhập" textAlignment="CENTER" textFill="#fafafa">
+      <Button id="login_button" alignment="CENTER" contentDisplay="CENTER" layoutX="74.0" layoutY="218.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="17.0" prefWidth="302.0" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css" text="Đăng nhập" textAlignment="CENTER" textFill="#fafafa">
          <font>
-            <Font name="Berlin Sans FB Bold" size="24.0" />
+            <Font name="Berlin Sans FB Bold" size="12.0" />
          </font>
          <effect>
             <DropShadow />
          </effect>
-         <styleClass>
-            <String fx:value="linear-grad" />
-            <String fx:value="login" />
-         </styleClass>
       </Button>
-      <Hyperlink alignment="TOP_CENTER" layoutX="165.0" layoutY="311.0" prefHeight="22.0" prefWidth="119.0" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css" text="Quên mật khẩu?">
-         <font>
-            <Font name="SansSerif Regular" size="15.0" />
-         </font>
-      </Hyperlink>
    </children>
 </AnchorPane>
