--- a/src/views/login/login.fxml
+++ b/src/views/login/login.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -11,15 +13,20 @@
    <children>
       <TextField layoutX="38.0" layoutY="58.0" prefHeight="57.0" prefWidth="374.0" promptText="Số CMND" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css">
          <font>
-            <Font name="Berlin Sans FB" size="23.0" />
+            <Font name="Berlin Sans FB" size="21.0" />
          </font>
       </TextField>
+      <ImageView fitHeight="76.0" fitWidth="45.0" layoutX="359.0" layoutY="64.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../static/img/id.png" />
+         </image>
+      </ImageView>
       <PasswordField layoutX="38.0" layoutY="131.0" prefHeight="58.0" prefWidth="374.0" promptText="Mật khẩu" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css">
          <font>
             <Font name="Berlin Sans FB" size="20.0" />
          </font>
       </PasswordField>
-      <Button id="login_button" alignment="CENTER" contentDisplay="CENTER" layoutX="74.0" layoutY="218.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="17.0" prefWidth="302.0" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css" text="Đăng nhập" textAlignment="CENTER" textFill="#fafafa">
+      <Button id="login_button" alignment="CENTER" contentDisplay="CENTER" layoutX="71.0" layoutY="217.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="49.0" prefWidth="310.0" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css" text="Đăng nhập" textAlignment="CENTER" textFill="#fafafa">
          <font>
             <Font name="Berlin Sans FB Bold" size="12.0" />
          </font>
@@ -27,5 +34,10 @@
             <DropShadow />
          </effect>
       </Button>
+      <ImageView fitHeight="35.0" fitWidth="45.0" layoutX="364.0" layoutY="143.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../static/img/pass.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
