--- a/src/views/login/login.fxml
+++ b/src/views/login/login.fxml
@@ -11,22 +11,22 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="452.0" styleClass="pane" stylesheets="@../../static/css/fullpackstyling.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
    <children>
-      <TextField layoutX="38.0" layoutY="58.0" prefHeight="57.0" prefWidth="374.0" promptText="Số CMND" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css">
+      <TextField layoutX="38.0" layoutY="58.0" prefHeight="57.0" prefWidth="374.0" promptText="Số CMND" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css" AnchorPane.leftAnchor="38.0" AnchorPane.rightAnchor="39.60000000000002">
          <font>
             <Font name="Berlin Sans FB" size="21.0" />
          </font>
       </TextField>
-      <ImageView fitHeight="76.0" fitWidth="45.0" layoutX="359.0" layoutY="64.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="76.0" fitWidth="45.0" layoutX="359.0" layoutY="64.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="48.0">
          <image>
             <Image url="@../../static/img/id.png" />
          </image>
       </ImageView>
-      <PasswordField layoutX="38.0" layoutY="131.0" prefHeight="58.0" prefWidth="374.0" promptText="Mật khẩu" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css">
+      <PasswordField layoutX="38.0" layoutY="131.0" prefHeight="58.0" prefWidth="374.0" promptText="Mật khẩu" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css" AnchorPane.leftAnchor="38.0" AnchorPane.rightAnchor="39.60000000000002">
          <font>
             <Font name="Berlin Sans FB" size="20.0" />
          </font>
       </PasswordField>
-      <Button id="login_button" alignment="CENTER" contentDisplay="CENTER" layoutX="71.0" layoutY="217.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="49.0" prefWidth="310.0" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css" text="Đăng nhập" textAlignment="CENTER" textFill="#fafafa">
+      <Button id="login_button" alignment="CENTER" contentDisplay="CENTER" layoutX="71.0" layoutY="217.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="49.0" prefWidth="310.0" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css" text="Đăng nhập" textAlignment="CENTER" textFill="#fafafa" AnchorPane.leftAnchor="71.0" AnchorPane.rightAnchor="70.60000000000002">
          <font>
             <Font name="Berlin Sans FB Bold" size="12.0" />
          </font>
@@ -34,7 +34,7 @@
             <DropShadow />
          </effect>
       </Button>
-      <ImageView fitHeight="35.0" fitWidth="45.0" layoutX="364.0" layoutY="143.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="35.0" fitWidth="45.0" layoutX="364.0" layoutY="143.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="48.60000000000002">
          <image>
             <Image url="@../../static/img/pass.png" />
          </image>
