--- a/src/views/login/login.fxml
+++ b/src/views/login/login.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="452.0" styleClass="pane" stylesheets="@../../static/css/fullpackstyling.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="452.0" styleClass="pane" stylesheets="@../../static/css/main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
    <children>
-      <TextField layoutX="38.0" layoutY="58.0" prefHeight="57.0" prefWidth="374.0" promptText="Số CMND" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css" AnchorPane.leftAnchor="38.0" AnchorPane.rightAnchor="39.60000000000002">
+      <TextField layoutX="38.0" layoutY="58.0" prefHeight="57.0" prefWidth="374.0" promptText="Số CMND" styleClass="login" stylesheets="@../../static/css/main.css" AnchorPane.leftAnchor="38.0" AnchorPane.rightAnchor="39.60000000000002">
          <font>
             <Font name="Berlin Sans FB" size="21.0" />
          </font>
@@ -21,12 +21,12 @@
             <Image url="@../../static/img/id.png" />
          </image>
       </ImageView>
-      <PasswordField layoutX="38.0" layoutY="131.0" prefHeight="58.0" prefWidth="374.0" promptText="Mật khẩu" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css" AnchorPane.leftAnchor="38.0" AnchorPane.rightAnchor="39.60000000000002">
+      <PasswordField layoutX="38.0" layoutY="131.0" prefHeight="58.0" prefWidth="374.0" promptText="Mật khẩu" styleClass="login" stylesheets="@../../static/css/main.css" AnchorPane.leftAnchor="38.0" AnchorPane.rightAnchor="39.60000000000002">
          <font>
             <Font name="Berlin Sans FB" size="20.0" />
          </font>
       </PasswordField>
-      <Button id="login_button" alignment="CENTER" contentDisplay="CENTER" layoutX="71.0" layoutY="217.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="49.0" prefWidth="310.0" styleClass="login" stylesheets="@../../static/css/fullpackstyling.css" text="Đăng nhập" textAlignment="CENTER" textFill="#fafafa" AnchorPane.leftAnchor="71.0" AnchorPane.rightAnchor="70.60000000000002">
+      <Button id="login_button" alignment="CENTER" contentDisplay="CENTER" layoutX="71.0" layoutY="217.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="49.0" prefWidth="310.0" styleClass="login" stylesheets="@../../static/css/main.css" text="Đăng nhập" textAlignment="CENTER" textFill="#fafafa" AnchorPane.leftAnchor="71.0" AnchorPane.rightAnchor="70.60000000000002">
          <font>
             <Font name="Berlin Sans FB Bold" size="12.0" />
          </font>
