--- a/src/views/main_board/main.fxml
+++ b/src/views/main_board/main.fxml
@@ -7,104 +7,90 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="651.0" prefWidth="1074.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
     <children>
       <BorderPane fx:id="mainpane" prefHeight="200.0" prefWidth="200.0">
          <left>
-              <AnchorPane prefHeight="651.0" prefWidth="272.0" style="-fx-background-color: #ffce44;" BorderPane.alignment="CENTER">
+              <AnchorPane minHeight="-Infinity" prefHeight="652.0" prefWidth="263.0" style="-fx-background-color: #ffce44; -fx-border-color: black;">
                   <children>
-                      <VBox layoutY="121.0" prefHeight="530.0" prefWidth="272.0" style="-fx-background-color: #ffce44;">
-                          <children>
-                        <Button id="button1" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#handleHogiadinh" prefHeight="61.0" prefWidth="272.0" stylesheets="@../../static/css/fullpackstyling.css" text="Hộ gia đình" textFill="WHITE">
-                           <graphic>
-                              <ImageView fitHeight="24.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../../static/img/hogiadinh.png" />
-                                 </image></ImageView>
-                           </graphic>
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                           <padding>
-                              <Insets left="50.0" />
-                           </padding>
-                        </Button>
-                        <Button id="button1" alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="61.0" prefWidth="272.0" stylesheets="@../../static/css/fullpackstyling.css" text="Phát quà" textFill="WHITE">
-                           <graphic>
-                              <ImageView fitHeight="24.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../../static/img/qua.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                           <padding>
-                              <Insets left="50.0" />
-                           </padding>
-                        </Button>
-                        <Button id="button1" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#handlePhatquaThieunhi" prefHeight="33.0" prefWidth="272.0" stylesheets="@../../static/css/fullpackstyling.css" text="Thiếu nhi" textFill="WHITE">
-                           <graphic>
-                              <ImageView fitHeight="19.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../../static/img/thieunhi.png" />
-                                 </image></ImageView>
-                           </graphic>
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                           <padding>
-                              <Insets left="75.0" />
-                           </padding>
-                           <VBox.margin>
-                              <Insets />
-                           </VBox.margin>
-                        </Button>
-                        <Button id="button1" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#handlePhatquaHocsinh" prefHeight="33.0" prefWidth="280.0" stylesheets="@../../static/css/fullpackstyling.css" text="Học sinh" textFill="WHITE">
-                           <graphic>
-                              <ImageView fitHeight="19.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../../static/img/hocsinh.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                           <padding>
-                              <Insets left="75.0" />
-                           </padding>
-                           <VBox.margin>
-                              <Insets />
-                           </VBox.margin>
-                        </Button>
-                        <Button id="button1" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#handleThongke" prefHeight="61.0" prefWidth="272.0" stylesheets="@../../static/css/fullpackstyling.css" text="Thống kê" textFill="WHITE">
-                           <graphic>
-                              <ImageView fitHeight="24.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../../static/img/statistics.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                           <padding>
-                              <Insets left="50.0" />
-                           </padding>
-                        </Button>
-                          </children>
-                      </VBox>
-                      <ImageView fitHeight="57.0" fitWidth="55.0" layoutX="27.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" />
-                      <Label layoutX="81.0" layoutY="34.0" prefHeight="54.0" prefWidth="110.0" text="CNPM" textFill="WHITE">
+                      <Label layoutX="81.0" layoutY="34.0" prefHeight="54.0" prefWidth="110.0" stylesheets="@../../static/css/main.css" text="CNPM" textFill="WHITE">
                           <font>
                               <Font name="System Bold Italic" size="36.0" />
                           </font>
                       </Label>
+                  <Button id="button1" alignment="BASELINE_LEFT" layoutX="7.0" layoutY="163.0" mnemonicParsing="false" onAction="#handleHogiadinh" prefHeight="62.0" prefWidth="250.0" stylesheets="@../../static/css/main.css" text="Hộ gia đình" textFill="WHITE">
+                     <graphic>
+                        <ImageView fitHeight="24.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../static/img/hogiadinh.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <padding>
+                        <Insets left="50.0" />
+                     </padding>
+                  </Button>
+                  <Button id="button1" alignment="BASELINE_LEFT" layoutX="7.0" layoutY="387.0" mnemonicParsing="false" onAction="#handleThongke" prefHeight="62.0" prefWidth="250.0" stylesheets="@../../static/css/main.css" text="Thống kê" textFill="WHITE">
+                     <graphic>
+                        <ImageView fitHeight="24.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../static/img/statistics.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <padding>
+                        <Insets left="50.0" />
+                     </padding>
+                  </Button>
+                  <Button id="button1" alignment="BASELINE_LEFT" layoutX="6.0" layoutY="233.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="250.0" stylesheets="@../../static/css/main.css" text="Phát quà" textFill="WHITE">
+                     <graphic>
+                        <ImageView fitHeight="24.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../static/img/qua.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <padding>
+                        <Insets left="50.0" />
+                     </padding>
+                  </Button>
+                  <Button id="button1" alignment="BASELINE_LEFT" contentDisplay="RIGHT" layoutX="53.0" layoutY="301.0" mnemonicParsing="false" onAction="#handlePhatquaThieunhi" prefHeight="34.0" prefWidth="154.0" stylesheets="@../../static/css/main.css" text="Thiếu nhi" textAlignment="CENTER" textFill="WHITE">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <padding>
+                        <Insets left="75.0" />
+                     </padding>
+                  </Button>
+                  <Button id="button1" alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="54.0" layoutY="340.0" mnemonicParsing="false" onAction="#handlePhatquaHocsinh" prefHeight="34.0" prefWidth="154.0" stylesheets="@../../static/css/main.css" text="Học sinh" textFill="WHITE">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <padding>
+                        <Insets left="75.0" />
+                     </padding>
+                  </Button>
+                  <ImageView fitHeight="19.0" fitWidth="17.0" layoutX="73.0" layoutY="310.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../static/img/thieunhi.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="19.0" fitWidth="17.0" layoutX="64.0" layoutY="347.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../static/img/hocsinh.png" />
+                     </image>
+                  </ImageView>
                   </children>
               </AnchorPane>
          </left>
