--- a/src/views/phatqua/phatquaThieunhi.fxml
+++ b/src/views/phatqua/phatquaThieunhi.fxml
@@ -28,12 +28,12 @@
                     <children>
                   <ComboBox prefHeight="40.0" prefWidth="106.0" promptText="Năm" style="-fx-background-color: #ffffff; -fx-border-color: #1E8CCE;" />
                         <ComboBox prefHeight="39.0" prefWidth="239.0" promptText="Dịp đặc biệt" style="-fx-background-color: #ffffff; -fx-border-color: #1E8CCE;" />
-                        <Button mnemonicParsing="false" onAction="#suaThieuNhi" prefHeight="31.0" prefWidth="138.0" styleClass="linear-grad" stylesheets="@../../static/css/fullpackstyling.css" text="Phát quà" textFill="WHITE">
+                        <Button mnemonicParsing="false" onAction="#suaThieuNhi" prefHeight="31.0" prefWidth="138.0" styleClass="linear-grad" stylesheets="@../../static/css/main.css" text="Phát quà" textFill="WHITE">
                             <font>
                                 <Font size="18.0" />
                             </font>
                         </Button>
-                  <Button mnemonicParsing="false" onAction="#suaThieuNhi" prefHeight="31.0" prefWidth="138.0" styleClass="linear-grad" stylesheets="@../../static/css/fullpackstyling.css" text="Tạo mới dịp" textFill="WHITE">
+                  <Button mnemonicParsing="false" onAction="#suaThieuNhi" prefHeight="31.0" prefWidth="138.0" styleClass="linear-grad" stylesheets="@../../static/css/main.css" text="Tạo mới dịp" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
