--- a/src/views/thieunhi/thieunhi.fxml
+++ b/src/views/thieunhi/thieunhi.fxml
@@ -31,7 +31,7 @@
                       <children>
                           <TextField prefHeight="31.0" prefWidth="320.0" promptText="Search" style="-fx-border-color: #1E8CCE;" />
                           <ComboBox prefHeight="31.0" prefWidth="162.0" style="-fx-background-color: #ffffff; -fx-border-color: #1E8CCE;" />
-                          <Button mnemonicParsing="false" prefHeight="31.0" prefWidth="138.0" stylesheets="@../../static/css/fullpackstyling.css" text="Search" textFill="WHITE">
+                          <Button mnemonicParsing="false" prefHeight="31.0" prefWidth="138.0" stylesheets="@../../static/css/main.css" text="Search" textFill="WHITE">
                               <font>
                                   <Font size="14.0" />
                               </font>
@@ -43,7 +43,7 @@
                                   </ImageView>
                               </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#suaThieuNhi" prefHeight="31.0" prefWidth="138.0" stylesheets="@../../static/css/fullpackstyling.css" text="Sửa" textFill="WHITE">
+                  <Button mnemonicParsing="false" onAction="#suaThieuNhi" prefHeight="31.0" prefWidth="138.0" stylesheets="@../../static/css/main.css" text="Sửa" textFill="WHITE">
                      <font>
                         <Font size="14.0" />
                      </font>
